--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,14 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Install sshpass
       run: sudo apt-get update && sudo apt-get install -y sshpass
+    - name: Update known_hosts
+      run: |
+        mkdir -p ~/.ssh
+        ssh-keyscan -p 65002 151.106.124.122 >> ~/.ssh/known_hosts
+          
     - name: Create remote directory (if not exists)
       run: |
-        sshpass -p 'Rone2k23!' ssh -p 65002 u102654923@151.106.124.122 "mkdir -p /home/u102654923/domains/denzellanzaderas.online/public_html/loyalty-points-be"
+          sshpass -p '${{ secrets.SSH_PASS }}' ssh -p 65002 u102654923@151.106.124.122 "mkdir -p /home/u102654923/domains/denzellanzaderas.online/public_html/loyalty-points-be"
     - name: Deploy to Hostinger
       run: |
           sshpass -p '${{ secrets.SSH_PASS }}' rsync -avz -e "ssh -p 65002" ./ u102654923@151.106.124.122:/home/u102654923/domains/denzellanzaderas.online/public_html/loyalty-points-be
