--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,18 @@ jobs:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.0'
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 18.16.1
+
+    - name: Install npm
+      run: npm install
+    - name: Generate Laravel Encryption Key
+      run: php artisan key:generate
     - uses: actions/checkout@v3
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.test', '.env');"
+    - name: Create .env file from .env.test
+      run: cp .env.test .env
     - name: Install Composer
       run: |
         curl -sS https://getcomposer.org/installer | php
