--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 18.16.1
-
+    - name: List files in the current directory
+      run: ls -la
     - name: Install npm
       run: npm install
     - name: Generate Laravel Encryption Key
