--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.2.4'
@@ -19,11 +22,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 18.16.1
-    - name: List files in the current directory
-      run: ls -la
     - name: Install npm
       run: npm install
-      working-directory: ./
+
     - name: Generate Laravel Encryption Key
       run: php artisan key:generate
     - uses: actions/checkout@v3
