--- a/.env.test
+++ b/.env.test
@@ -9,11 +9,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+# DB_HOST=127.0.0.1
+DB_HOST=sql477.main-hosting.eu
 DB_PORT=3306
-DB_DATABASE=loyalty_points_system
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u102654923_loyaltypoints
+DB_USERNAME=u102654923_loyaltypoints
+DB_PASSWORD="Rone2k23!"
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
