--- a/.env.test
+++ b/.env.test
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
-DB_HOST=sql477.main-hosting.eu
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=u102654923_loyaltypoints
 DB_USERNAME=u102654923_loyaltypoints
