--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,8 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate Laravel Encryption Key
       run: php artisan key:generate
-      
+    - name: Migrate 
+      run: php artisan migrate:fresh --seed
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
