--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Generate Laravel Encryption Key
       run: php artisan key:generate
     - name: Migrate 
-      run: php artisan migrate:fresh --seed
+      run: php artisan migrate
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
