--- a/.env.test
+++ b/.env.test
@@ -10,11 +10,11 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
-DB_HOST=127.0.0.1
+DB_HOST=srv477.hstgr.io
 DB_PORT=3306
 DB_DATABASE=u102654923_loyaltypoints
 DB_USERNAME=u102654923_loyaltypoints
-DB_PASSWORD="Rone2k23!"
+DB_PASSWORD="eEjnQ5HJ33jc#yq"
 
 
 BROADCAST_DRIVER=log
