--- a/.env.test
+++ b/.env.test
@@ -12,9 +12,9 @@ DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 DB_HOST=srv477.hstgr.io
 DB_PORT=3306
-DB_DATABASE=u102654923_loyaltypoints
-DB_USERNAME=u102654923_loyaltypoints
-DB_PASSWORD="eEjnQ5HJ33jc#yq"
+DB_DATABASE=u102654923_dev_loyalty
+DB_USERNAME=u102654923_dev_loyalty
+DB_PASSWORD="r0n3Dev2k23!"
 
 
 BROADCAST_DRIVER=log
