--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -22,8 +22,8 @@ jobs:
 
    
     - uses: actions/checkout@v3
-    - name: Create .env file from .env.test
-      run: cp .env.test .env
+    - name: Create .env file from .env.development
+      run: cp .env.development .env
     - name: Install Composer
       run: |
         curl -sS https://getcomposer.org/installer | php
