--- a/.env.production
+++ b/.env.production
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
-DB_HOST=dltprimeventures.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dltprime_prod
 DB_USERNAME=dltprime
