--- a/.env.production
+++ b/.env.production
@@ -13,7 +13,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dltprime_prod
-DB_USERNAME=dltprime
+DB_USERNAME=root
 DB_PASSWORD="DTLpr1me2k23@"
 
 
