--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -64,7 +64,7 @@ jobs:
           
     - name: Create remote directory (if not exists)
       run: |
-          echo '${{ secrets.SSH_PROD }}' | sshpass -p '${{ secrets.SSH_PROD }}' ssh -t dltprime@31.220.55.56 "sudo -S mkdir -p /var/www/html/dltprime_prod_be"
+          echo '${{ secrets.SSH_PROD }}' | sshpass -p '${{ secrets.SSH_PROD }}' ssh -t root@31.220.55.56 "sudo -S mkdir -p /home/ubuntu/be.dltprimeventures.com/public_html"
     - name: Deploy to Hostinger
       run: |
-          sshpass -p '${{ secrets.SSH_PROD }}' rsync -avz -e "ssh -p 22" ./ root@31.220.55.56:/var/www/html/dltprime_prod_be
+          sshpass -p '${{ secrets.SSH_PROD }}' rsync -avz -e "ssh -p 22" ./ root@31.220.55.56:/home/ubuntu/be.dltprimeventures.com/public_html
