--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -24,16 +24,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Create .env file from .env.production
       run: cp .env.production .env
-    - name: Set up Composer cache
-      uses: actions/cache@v2
-      with:
-         path: ~/.composer/cache
-         key: composer-{{ runner.os }}-{{ hashFiles('composer.json') }}
-         restore-keys: |
-            composer-{{ runner.os }}-
+
     - name: Install Composer
       run: |
-        curl -sS https://getcomposer.org/installer | php
+        curl -sS https://getcomposer.org/installer | php -- --filename=composer --mirror=github
         php composer.phar install
         sudo mv composer.phar /usr/local/bin/composer
 
