--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -41,16 +41,18 @@ jobs:
       run: npm install
     - name: Create .htaccess file
       run: |
-        echo "<IfModule mod_rewrite.c>" > .htaccess
-            echo "Options +FollowSymLinks" >> .htaccess
-            echo "RewriteEngine On" >> .htaccess
-            echo "RewriteCond %{REQUEST_URI} !^/public/" >> .htaccess
-            echo "RewriteCond %{REQUEST_FILENAME} !-d" >> .htaccess
-            echo "RewriteCond %{REQUEST_FILENAME} !-f" >> .htaccess
-            echo "RewriteRule ^(.*)$ /public/$1" >> .htaccess
-            echo "#RewriteRule ^ index.php [L]" >> .htaccess
-            echo "RewriteRule ^(/)?$ public/index.php [L]" >> .htaccess
-        echo "</IfModule>"
+        cat <<EOL > .htaccess
+        <IfModule mod_rewrite.c>
+            Options +FollowSymLinks
+            RewriteEngine On
+            RewriteCond %{REQUEST_URI} !^/public/
+            RewriteCond %{REQUEST_FILENAME} !-d
+            RewriteCond %{REQUEST_FILENAME} !-f
+            RewriteRule ^(.*)$ /public/$1
+            #RewriteRule ^ index.php [L]
+            RewriteRule ^(/)?$ public/index.php [L]
+        </IfModule>
+        EOL
         
     - name: Install sshpass
       run: sudo apt-get update && sudo apt-get install -y sshpass
