--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -67,3 +67,4 @@ jobs:
     - name: Deploy to Hostinger
       run: |
           sshpass -p '${{ secrets.SSH_PROD }}' rsync -avz -e "ssh -p 22" ./ root@31.220.55.56:/home/ubuntu/be.dltprimeventures.com/public_html
+          echo '${{ secrets.SSH_PROD }}' | sshpass -p '${{ secrets.SSH_PROD }}' ssh -t root@31.220.55.56 "sudo -S chown www-data:www-data -R /home/ubuntu/be.dltprimeventures.com/public_html"
