--- a/.env.test
+++ b/.env.test
@@ -10,11 +10,11 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
-DB_HOST=srv477.hstgr.io
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u102654923_test_loyalty
-DB_USERNAME=u102654923_test_loyalty
-DB_PASSWORD="r0n3Dev2k23!"
+DB_DATABASE=dltprime_test
+DB_USERNAME=dltprime
+DB_PASSWORD="DLTprime2k23@"
 
 
 BROADCAST_DRIVER=log
