--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "production" ]
   pull_request:
-    branches: [ "prodiction" ]
+    branches: [ "production" ]
 
 jobs:
   laravel-tests:
